[tool.poetry]
name = "aws-secrets-cache"
version = "0.1.0"
description = ""
authors = ["Łukasz Kostka <lukasz.kostka@mirumee.com>"]
readme = "README.md"
packages = [{include = "aws_secrets_cache"}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.158"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
moto = "^4.1.11"
black = "^23.3.0"
ruff = "^0.0.272"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
