[tool.poetry]
name = "aws-secrets-cache"
version = "0.2.1"
description = ""
authors = ["Łukasz Kostka <lukasz.kostka@mirumee.com>"]
readme = "README.md"
packages = [{include = "aws_secrets_cache"}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.163"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
moto = "^4.1.12"
black = "^23.3.0"
ruff = ">=0.0.275,<0.0.279"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
