[tool.poetry]
name = "aws-secrets-cache"
version = "0.2.1"
description = ""
authors = ["Łukasz Kostka <lukasz.kostka@mirumee.com>"]
readme = "README.md"
packages = [{include = "aws_secrets_cache"}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.163"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
moto = ">=4.1.12,<6.0.0"
black = ">=23.3,<26.0"
ruff = ">=0.5.1,<0.9.9"
yapf = ">=0.40.1,<0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
